# OpenGLVoxelEngine

./: .gitignore  CMakeLists.txt  Project_Setup.bat  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
App/: App.h  Window.h
Engine/: BO.h  Bindable.h  Camera.h  Chunk.h  ChunkManager.h  Frustum.h  Shader.h  Texture.h  VAO.h  Vertex.h
Game/: Game.h
IO/: Keyboard.h  Mouse.h
Resources/Shaders/: basic.frag  basic.vert
World/: World.h
